chore: introduce initial java version bump commit
Signed-off-by: Naydenov <nikola.naydenov@limechain.tech>